--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@solidjs/router": "^0.15.0",
         "@solidjs/start": "^1.0.0",
         "gsap": "^3.12.5",
+        "lenis": "^1.3.17",
         "solid-js": "^1.8.15",
         "vinxi": "^0.3.11"
     },
