fix: use environment variable for GitHub Pages base path

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Build
         run: bun run build
+        env:
+          BASE_URL: /intro/
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
